# k-peg-hanoi

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md  k-peg-hanoi.md
k-peg-hanoi/: index.html
search/: search_index.json
src/k_peg_hanoi/: __init__.py
src/tests/: test_k_peg_hanoi.py
src/tests/snapshots/test_k_peg_hanoi/test_moves/2-3-3/: result.txt
src/tests/snapshots/test_k_peg_hanoi/test_moves/2-4-3/: result.txt
src/tests/snapshots/test_k_peg_hanoi/test_moves/3-3-7/: result.txt
src/tests/snapshots/test_k_peg_hanoi/test_moves/3-4-5/: result.txt
src/tests/snapshots/test_k_peg_hanoi/test_moves/4-3-15/: result.txt
src/tests/snapshots/test_k_peg_hanoi/test_moves/4-4-9/: result.txt
src/tests/snapshots/test_k_peg_hanoi/test_moves/4-5-7/: result.txt
src/tests/snapshots/test_k_peg_hanoi/test_moves/6-4-17/: result.txt
src/tests/snapshots/test_k_peg_hanoi/test_moves/8-3-255/: result.txt
tests/: test_k_peg_hanoi.py
tests/snapshots/: snap_test_k_peg_hanoi.py
