[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Tower of Hanoi (using k peg)"
homepage = "https://github.com/SaitoTsutomu/k-peg-hanoi"
license = "PSFL"
name = "k-peg-hanoi"
readme = "README.md"
version = "0.0.1"

[tool.poetry.scripts]
hanoi = "k_peg_hanoi:main"

[tool.poetry.dependencies]
fire = "^0.3.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pytest = "^6.1.1"
snapshottest = "^0.6.0"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
