[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Tower of Hanoi (using k peg)"
homepage = "https://github.com/SaitoTsutomu/k-peg-hanoi"
license = "Apache-2.0"
name = "k-peg-hanoi"
readme = "README.md"
version = "0.1.1"

[tool.poetry.scripts]
hanoi = "k_peg_hanoi:main"

[tool.poetry.dependencies]
fire = "^0.5"
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^23.7"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.5"
pytest = "^7.4"
snapshottest = "^0.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
