[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "fire>=0.7.0",
]
description = "Tower of Hanoi (using k peg)"
license = {text = "Apache-2.0"}
name = "k-peg-hanoi"
readme = "README.md"
requires-python = ">=3.11"
version = "0.2.5"

[project.scripts]
hanoi = "k_peg_hanoi:main"

[project.urls]
docs = "https://saitotsutomu.github.io/k-peg-hanoi/"
homepage = "https://github.com/SaitoTsutomu/k-peg-hanoi"

[tool.uv]
dev-dependencies = [
  "pytest>=8.4.0",
  "pytest-snapshot>=0.9.0",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D", "DOC", "E501", "PLR2004", "T201"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
